# big-red-button

./: .editorconfig  .gitattributes  .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  README.md  SECURITY.md  config.toml.example  pyproject.toml
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml
src/big_red_button/: __init__.py  __main__.py  cli.py  config.py  snapshot.py  utils.py
src/big_red_button/collectors/: __init__.py  cpu_memory.py  disks.py  foreground_app.py  gpu.py  installed_apps.py  network.py  processes.py  system.py  temperatures.py
tests/: __init__.py  test_collectors.py  test_config.py  test_core_logic.py  test_package.py  test_utils.py
